--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "author": "Alire Developers",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "~1.2.7",
-    "@actions/tool-cache": "~1.6.1"
+    "@actions/core": "^1.5.0",
+    "@actions/tool-cache": "^1.7.1"
   },
   "devDependencies": {
     "@types/jest": "~26.0.24",
